--- a/src/TipsAndTricks/TatBlog.WebApi/appsettings.json
+++ b/src/TipsAndTricks/TatBlog.WebApi/appsettings.json
@@ -1,13 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    //LAPTOP-JAHB9QA2
-    "DefaultConnection": "Server=LAPTOP-JAHB9QA2;Database=TatBlog; Trusted_Connection=True; MultipleActiveResultSets=true; TrustServerCertificate=True;"
-  }
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	},
+	"AllowedHosts": "*",
+	"ConnectionStrings": {
+		//LAPTOP-JAHB9QA2   SUNNYGOLDS
+		"DefaultConnection": "Server=SUNNYGOLDS;Database=TatBlog; Trusted_Connection=True; MultipleActiveResultSets=true; TrustServerCertificate=True;"
+	}
 }
